[package]
name = "StakTrace"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.19"
anyhow = "1"
thiserror = "1"
url = "2"
colored = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
